--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <a href="" id="userName">Menomonie Food Trucks</a>
 <div id="links">
     <a class="link" href="example.html" target="_blank">Your Food Truck Here</a>
+    <a class="link" href="example.html" target="_blank">Example Food Truck</a>
+    <a class="link" href="example.html" target="_blank">A Food Truck</a>
+
 </div>
 <!-- Javascript -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
