--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <body>
 <img id="userPhoto" src="img/pfp.png" alt="User Photo">
 
-<a href="" id="userName">Menomonie Food Trucks</a>
+<p id="title">Menomonie Food Trucks</p>
+<p class="desc">The best source for local food truck hours, locations, and days of operation.</p>
 <div id="links">
-    <a class="link" href="example.html" target="_blank">Your Food Truck Here</a>
-    <a class="link" href="example.html" target="_blank">Example Food Truck</a>
-    <a class="link" href="example.html" target="_blank">A Food Truck</a>
+    <p class="info" style="background-color: #2d2d2d;font-size: 1.1em;font-weight:500;padding-bottom:10px;">Want your food trucks hours, locations, and days to be easy to find? Contact me by phone (920) 903-2859 or email, contact@devaidan.com so we can arrange for your store to be on the site!    <a class="link" style="background-color: rgb(95,95,95);font-size: 1.1em;font-weight:500;margin:10px;">Each store gets their own customized page, I can also add: a map, a menu, and an about us section.</a></p>
+    <a class="link" href="example.html">Your Food Truck Here</a>
+    <a class="link" href="example.html">Your Food Truck Here</a>
+    <a class="link" href="example.html">Your Food Truck Here</a>
 
 </div>
+<footer><p>Created by <a href="https://devaidan.com/">Aidan Raney</a></P></footer>
 <!-- Javascript -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script  src="index.js"></script>
