--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <span class="info" style="background-color: #2d2d2d;font-size: 1.1em;font-weight:500;padding-bottom:10px;">Want your food trucks hours, locations, and days to be easy to find? Contact me by phone (920) 903-2859 or email, aidanrjob@gmail.com, so we can arrange for your store to be on the site!<p class="link" style="background-color: rgb(95,95,95);font-size: 1.1em;font-weight:500;margin:10px;">Each store gets their own customized page, I can also add: a map, a menu, and an about us section.</p></span>
     <a class="link" href="example.html">Your Food Truck Here</a>
     <a class="link" href="example.html">Your Food Truck Here</a>
+    <a class="link" href="example.html">Your Food Truck Here</a>
 </div>
     
 <footer><p>Created by <a href="https://devaidan.com/">Aidan Raney</a></P></footer>
