--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p id="title">Menomonie Food Trucks</p>
 <p class="desc">The best source for local food truck hours, locations, and days of operation.</p>
 <div id="links">
-    <span class="info" style="background-color: #2d2d2d;font-size: 1.1em;font-weight:500;padding-bottom:10px;">Want your food trucks hours, locations, and days to be easy to find? Contact me by phone (920) 903-2859 or email, aidanrjob@gmail.com, so we can arrange for your store to be on the site!<p class="link" style="background-color: rgb(95,95,95);font-size: 1.1em;font-weight:500;margin:10px;">Each store gets their own customized page, I can also add: a map, a menu, and an about us section.</p></span>
+    <span class="info" style="background-color: #2d2d2d;font-size: 1.1em;font-weight:500;padding-bottom:10px;">Want your food trucks hours, locations, and days to be easy to find? Contact me by phone (123) 456-789 or email, example@example.org, so we can arrange for your store to be on the site!<p class="link" style="background-color: rgb(95,95,95);font-size: 1.1em;font-weight:500;margin:10px;">Each store gets their own customized page, I can also add: a map, a menu, and an about us section.</p></span>
     <a class="link" href="example.html">Your Food Truck Here</a>
     <a class="link" href="example.html">Your Food Truck Here</a>
     <a class="link" href="example.html">Your Food Truck Here</a>
