--- a/example.html
+++ b/example.html
@@ -11,7 +11,7 @@
 <body>
 <a href="index.html" style="width: 100%;font-family: var(--font);font-size: 1.3rem;font-weight: 400;text-align: center;text-decoration: none;margin: 5px;line-height: 1.25;display: block;">Back to main menu</a>
 <img id="userPhoto" style="margin-top:20px; border-radius: 30px;" src="img/jumbo.jpg" alt="User Photo">
-<p class="desc" style="margin-top:20px;">Here's an example of a food truck page with days, hours, and locations.</p>
+<p class="desc" style="margin-top:20px;">Here's an example of a branded food truck page with days, hours, and locations.</p>
 <p id="title" style="margin-top:20px;">Jimbo's Jumbo Truck</p>
 <div id="links">
     <p class="info" style="font-size: 2.5em;background-color:black;color:#fbe42c;" href="/example.html" target="_blank">Our Hours & Location</p>
