--- a/example.html
+++ b/example.html
@@ -7,6 +7,11 @@
     <title>Example Food Truck</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <style>
+    .link, .info {
+
+    }
+    </style>
 </head>
 <body>
 <a href="index.html" style="width: 100%;font-family: var(--font);font-size: 1.3rem;font-weight: 400;text-align: center;text-decoration: none;margin: 5px;line-height: 1.25;display: block;">Back to main menu</a>
@@ -14,8 +19,8 @@
 <p class="desc" style="margin-top:20px;">Here's an example of a branded food truck page with days, hours, and locations.</p>
 <p id="title" style="margin-top:20px;">Jimbo's Jumbo Truck</p>
 <div id="links">
-    <p class="info" style="font-size: 2.5em;background-color:black;color:#fbe42c;" href="/example.html" target="_blank">Our Hours & Location</p>
-    <p class="info" style="line-height: 30px; font-weight: 300;background-color:black;color:#fbe42c;" href="/example.html" target="_blank">Monday 10am-5pm | 123 Example St<br>Tuesday 10am-5pm | 123 Example St<br>Wednesday 10am-5pm | 123 Example St<br>Thursday 10am-5pm | 123 Example St<br>Friday 10am-5pm | 123 Example St<br>Saturday 10am-5pm | 123 Example St<br>Sunday 10am-5pm | 123 Example St</p>
+    <p class="info" style="background-color: #fee124;color: #0d1008;font-weight: 500;font-size: 2.5em;line-height: 30px;" href="/example.html" target="_blank">Our Hours & Location</p>
+    <p class="info" style="font-size: 1.3rem; line-height: 30px;background-color: #fee124;color: #0d1008;font-weight: 500;" href="/example.html" target="_blank">Monday 10am-5pm | 123 Example St<br>Tuesday 10am-5pm | 123 Example St<br>Wednesday 10am-5pm | 123 Example St<br>Thursday 10am-5pm | 123 Example St<br>Friday 10am-5pm | 123 Example St<br>Saturday 10am-5pm | 123 Example St<br>Sunday 10am-5pm | 123 Example St</p>
 </div>
 <footer><p>Created by <a href="https://devaidan.com/">Aidan Raney</a></P></footer>
 </body>
