--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
 <a href="index.html" style="width: 100%;font-family: var(--font);font-size: 1.3rem;font-weight: 400;text-align: center;text-decoration: none;margin: 5px;line-height: 1.25;display: block;">Back to main menu</a>
 <img id="userPhoto" style="margin-top:20px; border-radius: 30px;" src="img/jumbo.jpg" alt="User Photo">
 <p class="desc" style="margin-top:20px;">Here's an example of a branded food truck page with days, hours, and locations.</p>
-<p id="title" style="margin-top:20px;">Jimbo's Jumbo Truck</p>
+<p id="title" style="margin-top:20px; text-shadow: 2px 2px #fee124;">Jimbo's Jumbo Truck</p>
 <div id="links">
     <p class="info" style="background-color: #fee124;color: #0d1008;font-weight: 500;font-size: 2.5em;line-height: 30px;" href="/example.html" target="_blank">Our Hours & Location</p>
     <p class="info" style="font-size: 1.3rem; line-height: 30px;background-color: #fee124;color: #0d1008;font-weight: 500;" href="/example.html" target="_blank">Monday 10am-5pm | 123 Example St<br>Tuesday 10am-5pm | 123 Example St<br>Wednesday 10am-5pm | 123 Example St<br>Thursday 10am-5pm | 123 Example St<br>Friday 10am-5pm | 123 Example St<br>Saturday 10am-5pm | 123 Example St<br>Sunday 10am-5pm | 123 Example St</p>
