added new features to example page and more
- Made more customizations into CSS variables to make integrating a CMS in the future easier
- Added a menu to the example page
- Added a map to the example page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 </head>
 
-<body>
+<body class="homePage">
     
 <img id="userPhoto" src="img/pfp.png" alt="User Photo">
 <p id="title">Menomonie Food Trucks</p>
