--- a/example.html
+++ b/example.html
@@ -7,16 +7,102 @@
     <title>Example Food Truck</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <style>
+        :root {
+            --fontFamily: 'Montserrat', sans-serif;
+            --background: rgba(0, 0, 0, 0.55);
+            --linkSelection: rgb(59, 59, 59);
+            --infoHeadingColor: #ffffff;
+
+
+            --pageBackgroundColor: #ffffff;
+            --pageTextColorLight: #fee124;
+            --pageTextColorDark: #000000;
+
+
+
+            --pageLinkBackgroundColor: #fee124;
+        }
+
+        /*Page Specific Styles*/
+        #userPhoto {
+            margin-top:20px;
+            border-radius: 30px;
+        }
+        .desc {
+            margin-top:20px;
+        }
+        #title {
+            margin-top:20px;
+            color: #000000;
+            text-shadow: 2px 2px #fee124;
+        }
+        .info.infoHeading {
+            font-weight: 700;
+            font-size: 2.5em;
+        }
+        .info {
+            font-size: 1.3rem;
+            line-height: 30px;
+            background-color: #fee124;
+            color: black;
+            font-weight: 500;
+            box-shadow: 2px 2px 10px 2px rgba(254, 225, 36, 0.76);
+        }
+
+    </style>
 </head>
-<body>
-<a href="index.html" style="width: 100%;font-family: var(--font);font-size: 1.3rem;font-weight: 400;text-align: center;text-decoration: none;margin: 5px;line-height: 1.25;display: block;">Back to main menu</a>
-<img id="userPhoto" style="margin-top:20px; border-radius: 30px;" src="img/jumbo.jpg" alt="User Photo">
-<p class="desc" style="margin-top:20px;">Here's an example of a branded food truck page with days, hours, and locations.</p>
-<p id="title" style="margin-top:20px; text-shadow: 2px 2px #fee124;">Jimbo's Jumbo Truck</p>
+<body class="examplePage">
+<a href="index.html" id="backToHome" style="">Back to main menu</a>
+<img id="userPhoto" src="img/jumbo.jpg" alt="User Photo">
+<p class="desc" >Here's an example of a branded food truck page with days, hours, and locations.</p>
+<p id="title">Jimbo's Jumbo Truck</p>
 <div id="links">
-    <p class="info" style="background-color: #fee124;color: #0d1008;font-weight: 500;font-size: 2.5em;line-height: 30px;" href="/example.html" target="_blank">Our Hours & Location</p>
-    <p class="info" style="font-size: 1.3rem; line-height: 30px;background-color: #fee124;color: #0d1008;font-weight: 500;" href="/example.html" target="_blank">Monday 10am-5pm | 123 Example St<br>Tuesday 10am-5pm | 123 Example St<br>Wednesday 10am-5pm | 123 Example St<br>Thursday 10am-5pm | 123 Example St<br>Friday 10am-5pm | 123 Example St<br>Saturday 10am-5pm | 123 Example St<br>Sunday 10am-5pm | 123 Example St</p>
+    <p class="info infoHeading menu" href="/example.html" target="_blank">Where are we now?</p>
+    <p id="map" class="info" href="/example.html" target="_blank">
+    </p>
+
+    <br>
+    <br>
+
+    <p class="info infoHeading" href="/example.html" target="_blank">Our Hours & Locations</p>
+    <p class="info" href="/example.html" target="_blank">Monday 10am-5pm | 123 Example St<br>Tuesday 10am-5pm | 123 Example St<br>Wednesday 10am-5pm | 123 Example St<br>Thursday 10am-5pm | 123 Example St<br>Friday 10am-5pm | 123 Example St<br>Saturday 10am-5pm | 123 Example St<br>Sunday 10am-5pm | 123 Example St</p>
+
+    <br>
+    <br>
+
+    <p class="info infoHeading menu" href="/example.html" target="_blank">Our Menu</p>
+    <p class="info" href="/example.html" target="_blank">
+        Roast Beef Sandwhich<br>
+        Slice of Pizza<br>
+        Lumberjack Hamburger<br>
+        Hometown Cheeseburger<br>
+        Sloppy Joe<br>
+    </p>
+
+
 </div>
 <footer><p>Created by <a href="https://devaidan.com/">Aidan Raney</a></P></footer>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"  defer ></script>
+<script>
+    // Initialize and add the map
+    function initMap() {
+        // The location of Uluru
+        const uluru = { lat: -25.344, lng: 131.031 };
+        // The map, centered at Uluru
+        const map = new google.maps.Map(document.getElementById("map"), {
+            zoom: 4,
+            center: uluru,
+        });
+        // The marker, positioned at Uluru
+        const marker = new google.maps.Marker({
+            position: uluru,
+            map: map,
+        });
+    }
+
+    window.initMap = initMap;
+</script>
 </body>
 </html>
