--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="link" href="example.html">Your Food Truck Here</a>
 </div>
     
-<footer><p>Created by <a href="https://devaidan.com/">Aidan Raney</a></P></footer>
+<footer><p>Created by <a href="https://devaidan.com/">Aidan</a></P></footer>
 <!-- Javascript -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src="index.js"></script>
